@@ -1,6 +1,7 @@
 package com.mrlonis;
 
 import java.awt.Dimension;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
@@ -137,7 +138,7 @@ public class PathFinder {
      * @return The PrioiortyQueue of sorted wires.
      */
     public static PriorityQueue<Wire> wiresSort(List<Wire> wires) {
-        PriorityQueue<Wire> yo = new PriorityQueue<>((x, y) -> x.separation() - y.separation());
+        PriorityQueue<Wire> yo = new PriorityQueue<>(Comparator.comparingInt(Wire::separation));
 
         for (Wire x : wires) {
             yo.add(x);
@@ -221,7 +222,7 @@ public class PathFinder {
                         return null;
                     }
 
-                    notAcceptables.add(0, curr);
+                    notAcceptables.addFirst(curr);
                     path.remove(i - 1);
                     i = path.size();
                     curr = path.get(i - 1);
@@ -443,7 +444,7 @@ public class PathFinder {
             numberOfIterations++;
         }
 
-        if (path.get(path.size() - 1).equals(to)) {
+        if (path.getLast().equals(to)) {
             return new Pair(path, firstDir);
         } else {
             for (Coord cor : path) {
